Fix #21, add scrollbar on manual search

--- a/popups/popup.less
+++ b/popups/popup.less
@@ -53,7 +53,8 @@ html, body {
 body {
   width: 400px;
   padding: 16px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   text-rendering: optimizeLegibility;
 }
 
@@ -68,7 +69,7 @@ ng-view {
 
 options-link {
   display: block;
-  position: absolute;
+  position: fixed;
   right: -3;
   bottom: -1;
 
